--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,67 @@
-h1 {
-  text-align: center;
+body {
+  background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
 
-body {
-  background: lightskyblue;
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background: linear-gradient(to top, #dfe9f3 0%, white 100%);
+  padding: 50px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+  border-radius: 10px;
+}
+
+h1 {
   text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 50px;
+  color: rgb(29, 93, 161);
+}
+
+select {
+  display: block;
+  width: 100%;
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 10px;
+  color: rgb(29, 93, 161);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.city {
+  display: flex;
+  margin: 10px 0;
+  justify-content: space-between;
+  padding: 20px 0;
+  border-bottom: 1px dashed grey;
+  color: rgb(29, 93, 161);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.city:last-child {
+  border: none;
+}
+
+h2 {
+  margin: 0 0 15px;
+  font-size: 40px;
+}
+
+.date {
+  font-size: 17px;
+  opacity: 0.6;
+}
+
+.time {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+footer {
+  text-align: center;
+  font-size: 18px;
+  color: rgb(29, 93, 161);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  padding-bottom: 40px;
+  padding-top: 0px;
 }
