--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ select {
   margin: 10px 0;
   justify-content: space-between;
   padding: 20px 0;
-  border-bottom: 1px dashed grey;
+  border-bottom: 1px dotted grey;
   color: rgb(29, 93, 161);
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
