--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@ body {
 .container {
   max-width: 600px;
   margin: 60px auto;
-  background: linear-gradient(to top, #dfe9f3 0%, white 100%);
+  background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
   padding: 50px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 h1 {
@@ -22,9 +22,11 @@ select {
   display: block;
   width: 100%;
   font-size: 18px;
-  border-radius: 4px;
+  border-radius: 20px;
+  border-color: #1d5da1;
   padding: 10px;
   color: rgb(29, 93, 161);
+  background-color: #c5e5f5;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
